fixup! Align address lines left

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -131,6 +131,7 @@ main {
 }
 
 #home-address {
+	display: inline-block;
 	font-style: normal;
 	text-align: left;
 }
